--- a/bildearkiv.html
+++ b/bildearkiv.html
@@ -9,7 +9,7 @@
     <body>
         <nav>
             <div class="horizontal-menu">
-                <a href="hjemmeside.html">Lokale</a>
+                <a href="index.html">Lokale</a>
                 <a href="historie.html">Historie</a>
                 <a href="leie.html">Leie</a>
                 <a href="bildearkiv.html" class="active">Bilder</a>
