--- a/historie.html
+++ b/historie.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="horizontal-menu">
-            <a href="hjemmeside.html">Lokale</a>
+            <a href="index.html">Lokale</a>
             <a href="historie.html" class="active">Historie</a>
             <a href="leie.html">Leie</a>
             <a href="bildearkiv.html">Bilder</a>
