--- a/hjemmeside.html
+++ b/hjemmeside.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="horizontal-menu">
-            <a href="hjemmeside.html" class="active">Lokale</a>
+            <a href="index.html" class="active">Lokale</a>
             <a href="historie.html">Historie</a>
             <a href="leie.html">Leie</a>
             <a href="bildearkiv.html">Bilder</a>
